--- a/css/styles.css
+++ b/css/styles.css
@@ -83,10 +83,11 @@ body {
   color: white;
   border: none;
   border-radius: 5px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 400;
   cursor: pointer;
   transition: 0.3s;
+  letter-spacing: 2px;
 }
 
 .textbtn button:hover {
