--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,47 @@ body {
   background-size: cover;
   font-family: "Inter", sans-serif;
 }
-
+nav {
+  border-radius: 9px;
+  background: #090a1c;
+  backdrop-filter: blur(50px);
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 540px;
+  height: 51px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  padding: 10px;
+  position: absolute;
+  z-index: 100;
+  right: calc(50% - 540px / 2);
+  top: 5px;
+}
+nav h1 {
+  color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+nav button {
+  width: 97px;
+  height: 28px;
+  border-radius: 9px;
+  background: #fff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+nav button:hover {
+  background: #272c3d;
+  color: white;
+}
 .wrapper {
+  position: relative;
   max-width: 1924px;
   margin-left: auto;
   margin-right: auto;
@@ -47,7 +86,43 @@ body {
   flex-direction: column;
   padding: 20px;
 }
+.text1 h1 {
+  text-align: center;
+  font-size: 2.4375rem;
+  font-size: 39px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  background: linear-gradient(180deg, #fff 20%, rgba(254, 254, 254, 0) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  overflow: hidden;
+  border-right: 1px solid rgb(245, 245, 245);
+  white-space: nowrap;
+  margin: 0 auto;
+  border-bottom-width: 1px;
 
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgba(235, 235, 235, 0.977);
+  }
+}
 .text1 {
   margin-bottom: 40px;
 }
@@ -69,7 +144,6 @@ body {
   text-align: center;
   margin-bottom: 20px;
 }
-
 .textbtn {
   width: 184px;
   height: 40px;
@@ -83,7 +157,7 @@ body {
   color: white;
   border: none;
   border-radius: 5px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 400;
   cursor: pointer;
   transition: 0.3s;
