--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,13 @@ nav button {
   outline: none;
   border: none;
   cursor: pointer;
+  transition: 0.3s;
+  color: #272c3d;
+  font-weight: 600;
 }
 nav button:hover {
   background: #272c3d;
+  transform: scale(1.1);
   color: white;
 }
 .wrapper {
@@ -179,17 +183,12 @@ nav button:hover {
 }
 
 .box {
-  border: 1px solid rgba(255, 255, 255, 0.09);
-  background: rgba(12, 14, 26, 0.15);
-  backdrop-filter: blur(50px);
-  -webkit-backdrop-filter: blur(50px);
-  border-radius: 10px;
-  background: linear-gradient(
-    180deg,
-    rgba(44, 51, 86, 0.02) 0%,
-    rgba(173, 185, 245, 0.04) 100%
-  );
-
+  background: rgba(12, 14, 26, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border-radius: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   height: 55%;
 }
 
