--- a/css/article.css
+++ b/css/article.css
@@ -96,11 +96,16 @@ nav li.active::before {
   );
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
 .header h1 {
   color: white;
   font-size: 2rem;
   margin-top: 20px;
-  margin-bottom: 20px;
   text-align: center;
   overflow: hidden;
 }
@@ -132,53 +137,46 @@ nav li.active::before {
 }
 
 .main-con {
-  max-width: 1920px;
+  background-image: url("/img/bg.png");
+  background: rgba(12, 14, 26, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border-radius: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  max-width: 1450px;
   margin-left: auto;
   margin-right: auto;
-  display: grid;
-  gap: 100px;
-  grid-area: 1 / 1 / 2 / 2;
-  padding: 1%;
-  height: 100%;
 }
-.main-con h3 {
-  color: white;
-  font-size: 1.9rem;
-  margin-left: 60px;
-  position: relative;
-  top: 250%;
-}
+
 .con1 {
+  padding: 20px;
   display: flex;
   flex-direction: row;
   gap: 10px;
-  justify-content: center;
-  align-items: center;
+  justify-content: stretch;
+  align-items: stretch;
   width: 100%;
-  height: 650px;
 }
 .left {
   width: 100%;
-  border: 1px solid rgba(125, 125, 125, 0.17);
   border-radius: 20px;
-  height: 100%;
+  padding: 10px;
 }
+
 .article {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 10px;
   border-radius: 20px;
-  height: 100%;
-  width: 100%;
   background: rgba(12, 14, 26, 0.4);
   box-shadow: 0 8px 32px 0 rgba(11, 13, 34, 0.37);
   backdrop-filter: blur(9.5px);
   -webkit-backdrop-filter: blur(9.5px);
+  border: 1px solid rgba(125, 125, 125, 0.17);
 }
 .article-pic {
-  max-width: 100%;
-  height: auto;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -186,16 +184,13 @@ nav li.active::before {
 .article-pic img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .arcticle-details {
-  flex: 1;
   padding: 10px;
   display: flex;
   flex-direction: column;
   color: white;
-  gap: 10px;
 }
 
 .arcticle-details p {
@@ -216,45 +211,47 @@ nav li.active::before {
 .author-details h3 {
   font-size: 1.5rem;
 }
-.right {
-  width: 100%;
-  gap: 10px;
-  height: 100%;
-  border-radius: 20px;
-}
+
 .right1 {
-  grid-area: 1 / 2 / 2 / 3;
+  border-radius: 22px;
   border: 1px solid rgba(125, 125, 125, 0.17);
 }
 .right2 {
-  grid-area: 2 / 2 / 3 / 3;
+  border-radius: 22px;
   border: 1px solid rgba(125, 125, 125, 0.17);
 }
 .right3 {
-  grid-area: 3 / 2 / 4 / 3;
+  border-radius: 22px;
   border: 1px solid rgba(125, 125, 125, 0.17);
 }
-
+.right-container {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+}
+.right-container div {
+  height: 100%;
+}
 .side-articles {
   display: flex;
   align-items: center;
   flex-direction: row;
   gap: 10px;
   padding: 10px;
-
   width: 100%;
+  height: 100%;
   background: rgba(12, 14, 26, 0.4);
   box-shadow: 0 8px 32px 0 rgba(11, 13, 34, 0.37);
   backdrop-filter: blur(9.5px);
   -webkit-backdrop-filter: blur(9.5px);
 }
 .side-pic {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 30%;
   height: 200px;
-  width: 500px;
-  overflow: hidden;
 }
 
 .side-pic img {
@@ -265,6 +262,7 @@ nav li.active::before {
 }
 .side-text {
   color: #fff;
+  width: 70%;
 }
 .side-text h1 {
   font-size: 1.3rem;
@@ -278,57 +276,35 @@ nav li.active::before {
   margin-bottom: 10px;
   font-weight: 200;
 }
-.side-articles3 {
+.footer {
+  padding: 20px;
   display: flex;
-  align-items: center;
-  flex-direction: row;
-  gap: 10px;
-  padding: 10px;
-  border-radius: 20px;
-  width: 100%;
-  background: rgba(12, 14, 26, 0.4);
-  box-shadow: 0 8px 32px 0 rgba(11, 13, 34, 0.37);
-  backdrop-filter: blur(9.5px);
-  -webkit-backdrop-filter: blur(9.5px);
-}
-.side-pic3 {
-  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 200px;
-  width: 400px;
-  overflow: hidden;
+  color: #fff;
+  text-align: center;
+
+  border-radius: 15px;
 }
 
-.side-pic3 img {
-  height: 100%;
-  width: 100%;
-  border-radius: 20px;
-  object-fit: cover;
+.footer p {
+  margin: 10px 0;
 }
-.side-text3 {
-  color: #fff;
-}
-.side-text3 h1 {
-  font-size: 1.3rem;
-  margin-bottom: 10px;
-}
-.side-text3 h4 {
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-.side-text3 p {
-  margin-bottom: 10px;
-  font-weight: 200;
-}
-.con2 {
+
+.social-icons {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   gap: 20px;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  border: 1px solid rgba(125, 125, 125, 0.17);
+}
+
+.icon-link {
+  color: #ffffff;
+  font-size: 24px;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.icon-link:hover {
+  color: #6c757d;
+  transform: scale(1.2);
 }
