--- a/css/trends.css
+++ b/css/trends.css
@@ -12,9 +12,7 @@ body {
   background-size: cover;
   font-family: "Inter", sans-serif;
   overflow-x: hidden;
-  padding: 50px;
 }
-
 nav {
   border-radius: 9px;
   background: #090a1c;
@@ -36,7 +34,6 @@ nav ul {
   list-style: none;
   gap: 20px;
 }
-
 nav li {
   padding: 10px;
   cursor: pointer;
@@ -52,7 +49,6 @@ nav a {
   transition: color 0.3s ease;
   position: relative;
 }
-
 nav svg {
   color: white;
   font-size: 20px;
@@ -60,7 +56,6 @@ nav svg {
   margin-right: 20px;
   transition: transform 1s ease-in-out;
 }
-
 nav svg:hover {
   transform: rotate(360deg);
 }
@@ -101,19 +96,25 @@ nav li.active::before {
 }
 
 .wrapper {
-  max-width: 1924px;
+  max-width: 1450px;
   margin-left: auto;
   margin-right: auto;
   padding: 50px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  background: rgba(12, 14, 26, 0.4);
+  background-image: url("../img/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(9.5px);
   -webkit-backdrop-filter: blur(9.5px);
   border-radius: 22px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 5%;
+  position: relative;
+
+  padding-bottom: 8%;
 }
 
 header {
@@ -127,8 +128,9 @@ header h1 {
   margin-bottom: 10px;
 }
 
-header p {
-  font-size: 1rem;
+header h3 {
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 .artificial-intelligence {
   display: flex;
@@ -136,15 +138,13 @@ header p {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
-
   width: 100%;
-
   color: #fff;
 }
 
 .artificial-intelligence img {
-  width: 40%;
-  height: 40%;
+  width: 30%;
+  height: 30%;
   border-radius: 10px;
 }
 .augmented-reality {
@@ -153,9 +153,7 @@ header p {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
-
   width: 100%;
-
   color: #fff;
 }
 .augmented-reality img {
@@ -210,11 +208,15 @@ header p {
 }
 .btn-holder button {
   cursor: pointer;
-  background-color: #202334;
+  background-color: transparent;
   color: #fff;
-  border: none;
+  box-shadow: 0 8px 32px 0 rgba(101, 13, 217, 0.57);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border-radius: 22px;
+  border: 1px solid rgba(207, 183, 255, 0.943);
   border-radius: 10px;
-  width: auto;
+
   padding: 10px 20px;
   font-size: 1rem;
   transition: background-color 0.3s, transform 0.3s;
