--- a/css/contactus.css
+++ b/css/contactus.css
@@ -28,6 +28,7 @@ nav {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+  position: relative;
 }
 
 nav ul {
@@ -99,6 +100,137 @@ nav li.active::before {
   );
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background: rgba(12, 14, 26, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border-radius: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.contact-pic {
+  width: 50%;
+  height: 100%;
+}
+
+.contact-pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 22px 0 0 22px;
+}
+
+.contact-form {
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: #ffffff;
+}
+
+.contact-form h2 {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.input-container i {
+  margin-right: 10px;
+  font-size: 20px;
+}
+.input-container {
+  position: relative;
+}
+
+.input-container i {
+  position: absolute;
+  top: -4%;
+  transform: translateY(-50%);
+}
+
+.contact-form h2 {
+  text-align: center;
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  padding: 20px;
+  gap: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.contact-form form input,
+.contact-form form textarea {
+  width: 100%;
+  background: #c8cff157;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 200;
+  transition: all 0.3s ease;
+}
+
+.contact-form form input::placeholder,
+.contact-form form textarea::placeholder {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.contact-form form textarea {
+  height: 200px;
+}
+
+.contact-form form button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(91deg, #3e0acc 15.25%, rgb(0, 110, 255) 146.09%);
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.contact-form form button:hover {
+  background: linear-gradient(91deg, #2e0a94 15.25%, rgb(0, 110, 255) 146.09%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 .footer {
   padding: 20px;
   display: flex;
