--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ nav button:hover {
   border: 1px solid rgba(255, 255, 255, 0.18);
   padding: 5%;
   position: relative;
-  height: 90vh;
+  height: 95vh;
   padding-bottom: 8%;
 }
 
@@ -192,25 +192,59 @@ nav button:hover {
   height: 60%;
   color: #fff;
   padding: 20px;
-
   gap: 10px;
-}
-.box p {
-  font-size: 1.2rem;
-  font-weight: 500;
 }
 
 .box1 {
   width: calc(60% - 10px);
+  background-image: url("../img/bgbox1.png");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.text {
+  width: 60%;
+}
+.text p {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .box2 {
   width: calc(40% - 10px);
+  background-image: url("../img/conimg.png");
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.box3,
+.box3 {
+  width: calc(30% - 10px);
+}
+.box3 p {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+}
+.card3 {
+  float: right;
+}
 .box4 {
   width: calc(30% - 10px);
+  background-color: #7a90ff;
+}
+.text4 {
+  width: 50%;
+}
+.text4 p {
+  margin-top: 30px;
+  font-size: 2rem;
+  font-weight: 600;
+
+  color: black;
 }
 
 .box4 {
@@ -219,43 +253,145 @@ nav button:hover {
 
 .box5 {
   width: calc(46% - 10px);
+  background-image: url("../img/bg5.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.img-card {
-  position: absolute;
-  box-shadow: 0 8px 32px 0 rgba(97, 43, 197, 0.493);
+.box5 p {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.header2 {
+  margin-top: 100px;
+  height: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.header2 h1 {
+  text-align: center;
+  font-size: 2rem;
+  font-size: 39px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  background: linear-gradient(180deg, #fff 20%, rgba(254, 254, 254, 0) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.container2 {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.container-card1 {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: rgba(12, 14, 26, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(9.5px);
   -webkit-backdrop-filter: blur(9.5px);
   border-radius: 22px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.container-card1-img {
+  width: 100%;
+
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+.container-card1-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 22px 22px 0 0;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.container-card1-text {
+  background-color: #1a1e2b;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  border-radius: 0 0 22px 22px;
+  padding: 20px;
+}
+.container-card1 h1 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+.container-card1 p {
+  font-size: 1rem;
+  font-weight: 200;
+  margin-top: 20px;
 }
 
-.card1 {
-  width: 150px;
-  height: 150px;
+.container-card2 {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: rgba(12, 14, 26, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border-radius: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.container-card2-img {
+  width: 100%;
+  height: 500px;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.container-card2-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 22px 22px 0 0;
+  object-fit: cover;
   border-radius: 10px;
 }
-.card2 {
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
+.container-card2-text {
+  background-color: #1a1e2b;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  border-radius: 0 0 22px 22px;
+  padding: 20px;
 }
-.card3 {
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
+.container-card2 h1 {
+  font-size: 2rem;
+  font-weight: 600;
 }
-.card4 {
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
-}
-.card5 {
-  width: 120px;
-  height: 120px;
-  border-radius: 10px;
+.container-card2 p {
+  font-size: 1rem;
+  font-weight: 200;
+  margin-top: 20px;
 }
 .footer {
   padding: 20px;
