--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ nav {
   position: absolute;
   z-index: 100;
   right: calc(50% - 540px / 2);
-  top: 5px;
+  top: 0;
+  position: fixed;
 }
 nav h1 {
   color: #fff;
@@ -77,7 +78,7 @@ nav button:hover {
   border: 1px solid rgba(255, 255, 255, 0.18);
   padding: 5%;
   position: relative;
-  height: 95vh;
+  height: 100vh;
   padding-bottom: 8%;
 }
 
@@ -88,7 +89,7 @@ nav button:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 20px;
+  margin-top: 80px;
 }
 .text1 h1 {
   text-align: center;
@@ -179,7 +180,7 @@ nav button:hover {
   width: 60%;
   flex-wrap: wrap;
   gap: 10px;
-  bottom: 0;
+  margin-bottom: 100px;
 }
 
 .box {
@@ -208,7 +209,7 @@ nav button:hover {
   width: 60%;
 }
 .text p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 20px;
 }
@@ -223,14 +224,17 @@ nav button:hover {
 
 .box3 {
   width: calc(30% - 10px);
+  position: relative;
 }
 .box3 p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #fff;
 }
 .card3 {
-  float: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 .box4 {
   width: calc(30% - 10px);
@@ -241,7 +245,7 @@ nav button:hover {
 }
 .text4 p {
   margin-top: 30px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
 
   color: black;
@@ -262,7 +266,7 @@ nav button:hover {
   flex-direction: column;
 }
 .box5 p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #fff;
   margin-bottom: 20px;
